k8s/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    kubernetes.io/metadata.name: authelia
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
